# url-shortener-analytics

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 3583fb2efbfd_add_phase_3_analytics_stats_indexes.py  7109f86968a5_create_initial_tables.py  86ea9159fecb_add_phase_3_click_analytics_fields.py  9d3b77fc4dc7_add_phase_3_analytics_stats_indexes.py  9e6bb016fba7_add_webhook_fields_to_links.py  dbbfe45ea5f3_phase3_create_clicks_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: analytics.py  analytics_dashboard.py  analytics_ui.py  auth.py  dashboard_ui.py  links.py  redirect.py
app/core/: config.py  database.py  envelope.py  exceptions.py  openapi.py  redis_client.py  security.py
app/middleware/: rate_limit.py
app/models/: __init__.py  click.py  link.py  user.py
app/schemas/: analytics.py  common.py  link.py  user.py
app/services/: analytics.py  analytics_enrichment.py  analytics_queue.py  analytics_stats.py  auth_service.py  cache.py  counters.py  dashboard.py  geoip.py  privacy.py  rate_limiter.py  shortener.py  user_agent.py  webhooks.py
app/static/: dashboard.css
app/static/js/: analytics.js  auth.js  compare.js  dashboard.js  home.js  login.js  register.js
app/tasks/: analytics.py  celery_app.py  health.py  webhooks.py
app/templates/: base.html  create.html  create_placeholder.html  home.html  links.html
app/templates/auth/: login.html  register.html
app/templates/dashboard/: _base.html  analytics.html  compare.html  index.html
app/templates/public/: password_gate.html
app/web/: public.py  session.py
docs/: ANALYTICS.md  API.md  ARCHITECTURE.md  ASSUMPTIONS.md  DESIGN_DECISIONS.md  GEOIP_SETUP.md  JOURNAL.md  LOCAL_DEVELOPMENT.md  LOCAL_HANDOFF.md  PHASE4_FINAL.md  RELEASE_1_1_0.md  RELEASE_CHECKLIST.md  TECH_STACK.md
tests/: conftest.py  test_analytics_enrichment.py  test_analytics_task_helpers.py  test_celery_config.py  test_click_schema.py  test_counter_flush.py  test_d4_api_contracts.py  test_d4_cursor_pagination_contract.py  test_d4_dashboard_helpers.py  test_d4_dashboard_ui.py  test_d4_envelope_contracts.py  test_d4_openapi_examples.py  test_d4_webhook_contracts.py  test_dashboard_api.py  test_f2_auth_session.py  test_f3_links_ui.py  test_f4_analytics_ui.py  test_f5_passwordgate.py  test_rate_limiter.py  test_shortener.py  test_webhooks.py
