[project]
name = "url-shortener-analytics"
version = "1.0.0"
description = "A high-performance URL shortener with intelligent Redis caching and analytics"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "celery>=5.4",
    "geoip2>=4.8",
    "user-agents>=2.2",
    "passlib[bcrypt]>=1.7",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.3.0",
    "bcrypt>=4.0.1,<5.0",
    "aiofiles>=25.1.0",
    "httpx2>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx2>=2.5.0",
    "aiosqlite>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff: lint ─────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "alembic/versions/",
    ".venv/",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
]
ignore = [
    "B008", # FastAPI Depends() in default args
    "N999", # module name (alembic)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Ruff: format ───────────────────────────────────────────
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# ── mypy ───────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict = false
exclude = ["alembic/", ".venv/"]

# ── pytest ─────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "POSTGRES_HOST=localhost",
    "POSTGRES_PORT=5433",
    "POSTGRES_USER=postgres",
    "POSTGRES_PASSWORD=postgres",
    "POSTGRES_DB=urlshort",
    "REDIS_URL=redis://localhost:6380/0",
    "CELERY_BROKER_URL=redis://localhost:6380/1",
    "CELERY_RESULT_BACKEND=redis://localhost:6380/2",
    "CELERY_TASK_ALWAYS_EAGER=true",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.20",
]
